<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2sp"
            android:gravity="center"
            android:text="@string/contributors"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginRight="8sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dustan_online"
                    app:civ_border="true"
                    app:civ_border_color="@color/overlay_dark_30"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/felix_mwema"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/overlay_dark_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advisor"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/overlay_dark_80"
                    app:fontFamily="sans-serif-light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dustan_online"
                    app:civ_border="true"
                    app:civ_border_color="@color/overlay_dark_30"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/dustan_mbaga"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/overlay_dark_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/overlay_dark_80"
                    app:fontFamily="sans-serif-light" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="vertical"
            android:paddingLeft="8sp"
            android:paddingTop="8sp"
            android:paddingRight="8sp"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/overlay_dark_80"
                app:fontFamily="sans-serif-medium" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                android:scrollbars="none"
                android:scrollingCache="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:textAlignment="center"
                        android:text="@string/pps_intro"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/overlay_dark_80"
                        app:fontFamily="sans-serif-light" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="40sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pps_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/overlay_dark_80"
                        app:fontFamily="sans-serif-light" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="65sp"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>