<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="vertical"
            android:paddingLeft="8sp"
            android:paddingTop="8sp"
            android:paddingRight="8sp"
            android:paddingBottom="8sp">

            <TextView
                android:id="@+id/text_learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/overlay_dark_80"
                app:fontFamily="sans-serif-medium" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                android:scrollbars="none"
                android:scrollingCache="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:textAlignment="center"
                        android:text="@string/pps_intro"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/overlay_dark_80"
                        app:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="40sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pps_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/overlay_dark_80"
                        app:fontFamily="sans-serif-light" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="65sp"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>